--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
      "output_type": "stream",
      "text": [
       "imran 100 88239829 jkl74jkl@gmail.com\n",
-      "{'name': 'imran', 'age': 100, 'phone': 88239829, 'email': 'jkl74jkl@gmail.com'}\n"
+      "{'age': 100, 'phone': 88239829, 'email': 'jkl74jkl@gmail.com'}\n"
      ]
     }
    ],
@@ -703,7 +703,7 @@
     "imran=collage('imran',100,88239829,'jkl74jkl@gmail.com')\n",
     "\n",
     "def display(self):\n",
-    "    print(imran.name,imran.age,imran.phone,imran.email)\n",
+    "    print(self.name,self.age,self.phone,self.email)\n",
     "display(imran)\n",
     "\n",
     "\n",
@@ -894,14 +894,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "invalid account no or pin \n"
+      "******************************************************************************************************************************************************\n",
+      "           DATE          |      Type     |     AMOUNT    |    Balnace    \n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "501",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=189'>190</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=190'>191</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minvalid account no or pin \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=191'>192</a>\u001b[0m main(bank)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=192'>193</a>\u001b[0m \u001b[39m# for i in bank.cust_details:\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=193'>194</a>\u001b[0m \u001b[39m#     print(bank.cust_details[i].__dict__)\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=186'>187</a>\u001b[0m \u001b[39mif\u001b[39;00m acc_no \u001b[39min\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mcust_details \u001b[39mand\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mcust_details[acc_no]\u001b[39m.\u001b[39mpin \u001b[39m==\u001b[39m pin:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=187'>188</a>\u001b[0m     \u001b[39mself\u001b[39m \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mcust_details[acc_no]\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=188'>189</a>\u001b[0m     \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49mHome(\u001b[39mself\u001b[39;49m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=189'>190</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=190'>191</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minvalid account no or pin \u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=153'>154</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwithdraw()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=154'>155</a>\u001b[0m \u001b[39mcase\u001b[39;00m \u001b[39m3\u001b[39m:\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=155'>156</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mMINI_Statement()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=156'>157</a>\u001b[0m \u001b[39mcase\u001b[39;00m \u001b[39m4\u001b[39m:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=157'>158</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mCus_update()\n",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m8\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mDATE\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m25\u001b[39m),\u001b[39m'\u001b[39m\u001b[39mType\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39m'\u001b[39m\u001b[39mAMOUNT\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39m'\u001b[39m\u001b[39mBalnace\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),sep\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m|\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=83'>84</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m80\u001b[39m\u001b[39m*\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=84'>85</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtransaction[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49macc_no]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=85'>86</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m25\u001b[39m),\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mammount\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mbal\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),sep\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m|\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=86'>87</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m80\u001b[39m\u001b[39m*\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 501"
      ]
     }
    ],
@@ -916,7 +932,7 @@
     "    ROI=4\n",
     "    TL=9765434778\n",
     "    transaction={}\n",
-    "    def _init_(self,name,age,email,phone,address,aadhar,pancard,dob,gender,pin,bal=0) :\n",
+    "    def __init__(self,name,age,email,phone,address,aadhar,pancard,dob,gender,pin,bal=0) :\n",
     "        self.name=name\n",
     "        self.age=age\n",
     "        self.email=email\n",
@@ -991,7 +1007,7 @@
     "        print('DATE'.center(25),'Type'.center(15),'AMOUNT'.center(15),'Balnace'.center(15),sep='|')\n",
     "        print(80*'-')\n",
     "        for i in self.transaction[self.acc_no]:\n",
-    "            print(str(i['DATE']).center(25),str(i['Type']).center(15),str(i['AMOUNT']).center(15),str(i['Balnace']).center(15),sep='|')\n",
+    "            print(str(i['date']).center(25),str(i['type']).center(15),str(i['ammount']).center(15),str(i['bal']).center(15),sep='|')\n",
     "            print(80*'-')\n",
     "    def CHECK_BAL(self):\n",
     "        print('YOUR CURRENT BALANCE ',self.bal)\n",
@@ -1004,7 +1020,7 @@
     "        else:\n",
     "            self.failed()\n",
     "    def Cus_update(self):\n",
-    "        k=int(input('CHOOSE THE OPTION'))\n",
+    "        k=int(input('CHOOSE THE OPTION: 1. name\\n2. phone\\n3. email\\n4. address\\n5. exit' ))\n",
     "        match k:\n",
     "            case 1:\n",
     "                self.cname=input('ENTER THE NAME')\n",
@@ -1051,7 +1067,7 @@
     "            return\n",
     "    @classmethod\n",
     "    def Home(cls,self):\n",
-    "        y=int(input('Choose the option:\\n0.AccountDetails\\n1.Check Bal\\n2.Deposit\\n3.Withdraw\\n4.Mini Statement\\n5.update\\n6.Pin change\\n7.check ROI\\n8.transfer\\n9.Exit'))\n",
+    "        y=int(input('Choose the option:\\n0.AccountDetails\\n1.Check Bal\\n2.withdraw\\n3.Mini Statement\\n4.update\\n5.pin change\\n6.deposite\\n7.check ROI\\n8.transfer\\n9.Exit'))\n",
     "        print('*'*150)\n",
     "        match y:\n",
     "            case 0:\n",
@@ -1081,14 +1097,14 @@
     "        print('|Transaction is succes|')\n",
     "        print('|---------------------|')\n",
     "    @staticmethod\n",
-    "    def success():\n",
+    "    def failed():\n",
     "        print('|---------------------|')\n",
     "        print('|Transaction is Failed|')\n",
     "        print('|---------------------|')\n",
     "\n",
     "    \n",
-    "# obj=bank('sri',22,'sri@gmail.com',913254656,'HYD',13243657,'DSF457VF34','17-2-2003','M',1234)\n",
-    "# obj1=bank('veni',22,'veni@gmail.com',92132765656,'HYD',132233657,'DCV457VF34','17-11-2003','F',5678)\n",
+    "obj=bank('imran',24,'jkl74jkl@gmail.com',9948711089,'HYD',355232637942,'sdf4578r4','05/01/48','male',7777,500)\n",
+    "obj1=bank('veni',22,'veni@gmail.com',92132765656,'HYD',132233657,'DCV457VF34','17-11-2003','F',5678)\n",
     "def main(cls):\n",
     "    acc_no=int(input(\"enter the Account_no:\"))\n",
     "    pin=int(input(\"enter the Pin_no:\"))\n",
@@ -1097,7 +1113,9 @@
     "        cls.Home(self)\n",
     "    else:\n",
     "        print(\"invalid account no or pin \")\n",
-    "main(bank)"
+    "main(bank)\n",
+    "# for i in bank.cust_details:\n",
+    "#     print(bank.cust_details[i].__dict__)\n"
    ]
   },
   {
@@ -1136,6 +1154,60 @@
     "    p=89\n",
     "print(n.p)\n",
     "n.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'imran',\n",
+       " 'age': 24,\n",
+       " 'email': 'jkl74jkl@gmail.com',\n",
+       " 'phone': 9948711089,\n",
+       " 'aadhar': 355232637942,\n",
+       " 'pancard': 'sdf4578r4',\n",
+       " 'dob': '05/01/48',\n",
+       " 'gender': 'male',\n",
+       " 'address': 'HYD',\n",
+       " 'pin': 7777,\n",
+       " 'bal': 500}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class bank:\n",
+    "    bname='sbi'\n",
+    "    branch='202'\n",
+    "    ifsc='1234SBI23'\n",
+    "    no_cust=0\n",
+    "    cust_details={}\n",
+    "    ROI=4\n",
+    "    TL=9765434778\n",
+    "    transaction={}\n",
+    "    def __init__(self,name,age,email,phone,address,aadhar,pancard,dob,gender,pin,bal=0) :\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        self.email=email\n",
+    "        self.phone=phone\n",
+    "        self.aadhar=aadhar\n",
+    "        self.pancard=pancard\n",
+    "        self.dob=dob\n",
+    "        self.gender=gender\n",
+    "        self.address=address\n",
+    "        self.pin=pin\n",
+    "        self.bal=bal\n",
+    "        # self.no_cust1()\n",
+    "        # self.acc_no=500+self.no_cust\n",
+    "obj=bank('imran',24,'jkl74jkl@gmail.com',9948711089,'HYD',355232637942,'sdf4578r4','05/01/48','male',7777,500)\n",
+    "obj.__dict__"
    ]
   }
  ],
