--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -902,22 +902,17 @@
      "output_type": "stream",
      "text": [
       "******************************************************************************************************************************************************\n",
-      "           DATE          |      Type     |     AMOUNT    |    Balnace    \n",
-      "--------------------------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "501",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=189'>190</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=190'>191</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minvalid account no or pin \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=191'>192</a>\u001b[0m main(bank)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=192'>193</a>\u001b[0m \u001b[39m# for i in bank.cust_details:\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=193'>194</a>\u001b[0m \u001b[39m#     print(bank.cust_details[i].__dict__)\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=186'>187</a>\u001b[0m \u001b[39mif\u001b[39;00m acc_no \u001b[39min\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mcust_details \u001b[39mand\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mcust_details[acc_no]\u001b[39m.\u001b[39mpin \u001b[39m==\u001b[39m pin:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=187'>188</a>\u001b[0m     \u001b[39mself\u001b[39m \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mcust_details[acc_no]\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=188'>189</a>\u001b[0m     \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49mHome(\u001b[39mself\u001b[39;49m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=189'>190</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=190'>191</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minvalid account no or pin \u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=153'>154</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwithdraw()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=154'>155</a>\u001b[0m \u001b[39mcase\u001b[39;00m \u001b[39m3\u001b[39m:\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=155'>156</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mMINI_Statement()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=156'>157</a>\u001b[0m \u001b[39mcase\u001b[39;00m \u001b[39m4\u001b[39m:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=157'>158</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mCus_update()\n",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 30\u001b[0m line \u001b[0;36m8\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=82'>83</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mDATE\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m25\u001b[39m),\u001b[39m'\u001b[39m\u001b[39mType\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39m'\u001b[39m\u001b[39mAMOUNT\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39m'\u001b[39m\u001b[39mBalnace\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),sep\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m|\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=83'>84</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m80\u001b[39m\u001b[39m*\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=84'>85</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtransaction[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49macc_no]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=85'>86</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mdate\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m25\u001b[39m),\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mtype\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mammount\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),\u001b[39mstr\u001b[39m(i[\u001b[39m'\u001b[39m\u001b[39mbal\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mcenter(\u001b[39m15\u001b[39m),sep\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m|\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X41sZmlsZQ%3D%3D?line=86'>87</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m80\u001b[39m\u001b[39m*\u001b[39m\u001b[39m'\u001b[39m\u001b[39m-\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 501"
+      "Account no: 501\n",
+      "NAME: imran\n",
+      "AGE: 24\n",
+      "EMAIL: jkl74jkl@gmail.com\n",
+      "PHONE: 9948711089\n",
+      "BALANCE: 500\n",
+      "IFSC CODE: 1234SBI23\n",
+      "PAN: sdf4578r4\n",
+      "AADHAR: 355232637942\n",
+      "ADDRESS: HYD\n",
+      "******************************************************************************************************************************************************\n"
      ]
     }
    ],
