--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -912,6 +912,39 @@
       "PAN: sdf4578r4\n",
       "AADHAR: 355232637942\n",
       "ADDRESS: HYD\n",
+      "******************************************************************************************************************************************************\n",
+      "|---------------------|\n",
+      "|Transaction is succes|\n",
+      "|---------------------|\n",
+      "501 {'date': datetime.datetime(2023, 11, 9, 22, 4, 18, 302943), 'type': 'deposit', 'ammount': 5000, 'bal': 5500}\n",
+      "******************************************************************************************************************************************************\n",
+      "|---------------------|\n",
+      "|Transaction is succes|\n",
+      "|---------------------|\n",
+      "501 {'date': datetime.datetime(2023, 11, 9, 22, 4, 23, 279494), 'type': 'deposit', 'ammount': 4000, 'bal': 9500}\n",
+      "******************************************************************************************************************************************************\n",
+      "|---------------------|\n",
+      "|Transaction is succes|\n",
+      "|---------------------|\n",
+      "501 {'date': datetime.datetime(2023, 11, 9, 22, 4, 29, 4862), 'type': 'withdraw', 'ammount': 8000, 'bal': 1500}\n",
+      "******************************************************************************************************************************************************\n",
+      "           DATE          |      Type     |     AMOUNT    |    Balance    \n",
+      "--------------------------------------------------------------------------------\n",
+      "2023-11-09 22:04:18.302943|    deposit    |      5000     |      5500     \n",
+      "--------------------------------------------------------------------------------\n",
+      "2023-11-09 22:04:23.279494|    deposit    |      4000     |      9500     \n",
+      "--------------------------------------------------------------------------------\n",
+      "2023-11-09 22:04:29.004862|    withdraw   |      8000     |      1500     \n",
+      "--------------------------------------------------------------------------------\n",
+      "******************************************************************************************************************************************************\n",
+      "           DATE          |      Type     |     AMOUNT    |    Balance    \n",
+      "--------------------------------------------------------------------------------\n",
+      "2023-11-09 22:04:18.302943|    deposit    |      5000     |      5500     \n",
+      "--------------------------------------------------------------------------------\n",
+      "2023-11-09 22:04:23.279494|    deposit    |      4000     |      9500     \n",
+      "--------------------------------------------------------------------------------\n",
+      "2023-11-09 22:04:29.004862|    withdraw   |      8000     |      1500     \n",
+      "--------------------------------------------------------------------------------\n",
       "******************************************************************************************************************************************************\n"
      ]
     }
@@ -941,7 +974,7 @@
     "        self.bal=bal\n",
     "        self.no_cust1()\n",
     "        self.acc_no=500+self.no_cust\n",
-    "        self.concat_cust_details(self.acc_no,self)\n",
+    "        bank.concat_cust_details(self.acc_no,self)\n",
     "    @classmethod\n",
     "    def no_cust1(cls):\n",
     "        cls.no_cust+=1\n",
@@ -978,7 +1011,7 @@
     "        if amount>100:\n",
     "            self.bal+=amount\n",
     "            self.success()\n",
-    "            self.concat_transaction(self.acc_no,{'date':datetime.datetime.now(), 'type': 'deposit', 'ammount':amount,'baln':self.bal})\n",
+    "            self.concat_transaction(self.acc_no,{'date':datetime.datetime.now(), 'type': 'deposit', 'ammount':amount,'bal':self.bal})\n",
     "            return\n",
     "        else:\n",
     "            print(\"AMOUNT SHOULD BE MIN 100\")\n",
@@ -991,17 +1024,18 @@
     "        if amount3>=200 and self.bal>=amount3:\n",
     "            self.bal-=amount3\n",
     "            self.success()\n",
-    "            self.concat_transaction(self.acc_no,{'date':datetime.datetime.now(), 'type':'withdraw','amount':amount3,'bal':self.bal})\n",
-    "            self.success()\n",
+    "            self.concat_transaction(self.acc_no,{'date':datetime.datetime.now(), 'type':'withdraw','ammount':amount3,'bal':self.bal})\n",
+    "            # self.success()\n",
     "            return\n",
     "        else:\n",
     "            print(\"Amount should be min 100 Rupees\")\n",
     "            self.failed()\n",
     "            return self.withdraw(count+1)\n",
     "    def MINI_Statement(self):\n",
-    "        print('DATE'.center(25),'Type'.center(15),'AMOUNT'.center(15),'Balnace'.center(15),sep='|')\n",
+    "        print('DATE'.center(25),'Type'.center(15),'AMOUNT'.center(15),'Balance'.center(15),sep='|')\n",
     "        print(80*'-')\n",
-    "        for i in self.transaction[self.acc_no]:\n",
+    "        for i in bank.transaction[self.acc_no]:\n",
+    "            # print(i)\n",
     "            print(str(i['date']).center(25),str(i['type']).center(15),str(i['ammount']).center(15),str(i['bal']).center(15),sep='|')\n",
     "            print(80*'-')\n",
     "    def CHECK_BAL(self):\n",
@@ -1101,6 +1135,7 @@
     "obj=bank('imran',24,'jkl74jkl@gmail.com',9948711089,'HYD',355232637942,'sdf4578r4','05/01/48','male',7777,500)\n",
     "obj1=bank('veni',22,'veni@gmail.com',92132765656,'HYD',132233657,'DCV457VF34','17-11-2003','F',5678)\n",
     "def main(cls):\n",
+    "    # print(cls.cust_details[501].__dict__)\n",
     "    acc_no=int(input(\"enter the Account_no:\"))\n",
     "    pin=int(input(\"enter the Pin_no:\"))\n",
     "    if acc_no in cls.cust_details and cls.cust_details[acc_no].pin == pin:\n",
@@ -1109,8 +1144,7 @@
     "    else:\n",
     "        print(\"invalid account no or pin \")\n",
     "main(bank)\n",
-    "# for i in bank.cust_details:\n",
-    "#     print(bank.cust_details[i].__dict__)\n"
+    "\n"
    ]
   },
   {
@@ -1153,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1206,7 @@
        " 'bal': 500}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,6 +1238,20 @@
     "obj=bank('imran',24,'jkl74jkl@gmail.com',9948711089,'HYD',355232637942,'sdf4578r4','05/01/48','male',7777,500)\n",
     "obj.__dict__"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "09/11/2023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
