--- a/py_course/functional_pro/practice.ipynb
+++ b/py_course/functional_pro/practice.ipynb
@@ -46,16 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(('IMRAN', 100, 1111),)\n",
-      "already registered pleaze login\n",
-      "exited\n"
+      "login succesfull\n"
      ]
     }
    ],
@@ -78,8 +76,8 @@
     "\n",
     "\n",
     "def home(u_name,id,pin):\n",
-    "    \n",
-    "    pass\n",
+    "    print('login succesfull')\n",
+    "    # pass\n",
     "\n",
     "def login():\n",
     "    # cur1.execute(f'select* from users where name=\"{u_name}\"')\n",
@@ -196,6 +194,13 @@
     "# print(value)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
